--- a/weiboxuandu/res/layout/commentview.xml
+++ b/weiboxuandu/res/layout/commentview.xml
@@ -15,6 +15,7 @@
 			android:layout_gravity="center" android:layout_width="46.0dip"
 			android:layout_alignParentBottom="true"
 			android:layout_alignParentRight="true"></ImageView>
+		
 
 		<RelativeLayout android:layout_width="fill_parent"
 			android:layout_height="fill_parent">
@@ -32,14 +33,30 @@
 			android:paddingLeft="15dp" android:paddingTop="5dp" android:id="@+id/lyRightLayout"
 			android:layout_width="fill_parent" android:layout_height="wrap_content"
 			android:layout_margin="5.0dip">
-			<LinearLayout android:orientation="horizontal"
-				android:layout_width="fill_parent" android:layout_height="wrap_content"
+			
+<!-- 			<LinearLayout android:orientation="horizontal" -->
+<!-- 				android:layout_width="fill_parent" android:layout_height="fill_content" -->
+<!-- 				android:layout_marginRight="3.0dip"> -->
+<!-- 				昵称 -->
+<!-- 				<TextView android:textSize="15.0sp" android:textColor="#ff333333" -->
+<!-- 					android:id="@+id/tvCommentName" android:layout_width="wrap_content" -->
+<!-- 					android:layout_height="wrap_content" android:text="" /> -->
+<!-- 			</LinearLayout> -->
+			<RelativeLayout android:orientation="horizontal"
+				android:layout_width="fill_parent" android:layout_height="fill_parent"
 				android:layout_marginRight="3.0dip">
 				<!--昵称 -->
 				<TextView android:textSize="15.0sp" android:textColor="#ff333333"
 					android:id="@+id/tvCommentName" android:layout_width="wrap_content"
-					android:layout_height="wrap_content" android:text="" />
-			</LinearLayout>
+					android:layout_height="wrap_content" 
+					android:layout_gravity="left" 
+					android:text="" />
+				<TextView android:textSize="15.0sp" android:textColor="#ff333333"
+					android:id="@+id/tvCommentTime" android:layout_width="wrap_content"
+					android:layout_gravity="right" 
+					android:layout_alignParentRight="true" 
+					android:layout_height="wrap_content"  />
+			</RelativeLayout>
 			<!--内容 -->
 			<TextView android:textSize="15.0sp" android:textColor="#ff414951"
 				android:id="@+id/tvCommentContent" android:focusable="false"
@@ -47,11 +64,5 @@
 				android:layout_marginTop="10.0dip" android:autoLink="all"
 				android:text="" />
 		</LinearLayout>
-
-
-	
 	</LinearLayout>
-
-
-
 </RelativeLayout>
