--- a/weiboxuandu/res/layout/log.xml
+++ b/weiboxuandu/res/layout/log.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent" android:layout_height="fill_parent"
-	android:background="@drawable/splasf_bgg">
-	<ImageView android:src="@drawable/splash_logo"
+	android:background="@drawable/splasf_bgg2">
+	<ImageView android:src="@drawable/splash_logo2"
 		android:layout_width="wrap_content" android:scaleType="fitCenter"
 		android:id="@+id/logo_bg2" android:layout_height="wrap_content"
 		android:layout_centerHorizontal="true" android:layout_marginTop="100dp">
