--- a/weiboxuandu/res/layout/detailweibo2.xml
+++ b/weiboxuandu/res/layout/detailweibo2.xml
@@ -1,48 +1,215 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<LinearLayout android:orientation="vertical"  android:background="#fff4f4f4"
- android:layout_width="fill_parent" android:layout_height="fill_parent" 
-xmlns:android="http://schemas.android.com/apk/res/android" >
-        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
-            <RelativeLayout android:id="@+id/tweet_profile" android:background="@android:drawable/list_selector_background" android:paddingBottom="10.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
-<!--                   头像 -->
-                <ImageView android:id="@+id/tweet_profile_preview" android:layout_width="60.0sp" android:layout_height="60.0sp" android:layout_margin="10.0dip" android:src="@drawable/portrait" />
-<!--                 昵称 -->
-                <TextView android:textSize="18.0dip"  android:typeface="monospace" android:textStyle="bold" android:textColor="#ff222222" android:ellipsize="marquee" android:id="@+id/tweet_profile_name" android:fadingEdge="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="26.0dip" android:singleLine="true" android:layout_toRightOf="@id/tweet_profile_preview" />
-<!--                 是否是VIP -->
-                <ImageView android:id="@+id/tweet_profile_vip"  android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="26.0dip" android:layout_marginBottom="5.0dip" android:src="@drawable/v" android:layout_toRightOf="@id/tweet_profile_name" />
-<!--                 没仔细研究作用 -->
-                <View android:id="@+id/arrow" android:background="@drawable/ic_arrow" android:layout_width="12.0dip" android:layout_height="22.0dip" android:layout_marginTop="29.0dip" android:layout_marginRight="15.0dip" android:layout_alignParentRight="true" />
-            </RelativeLayout>
-<!--             分割线。 -->
-            <ImageView android:id="@+id/tweet_divider" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:src="@drawable/divider_horizontal_timeline" android:layout_below="@id/tweet_profile" />
-            <RelativeLayout android:id="@+id/tweet_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/tweet_divider">
-<!--                微博内容 -->
-                <TextView android:textSize="18.0sp"  android:text="内容" android:textColor="#ff222222" android:id="@+id/tweet_message" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" android:bufferType="spannable" />
-<!--                 转发内容 默认不显示 -->
-                <LinearLayout android:orientation="vertical" android:visibility="gone" android:id="@+id/src_text_block" android:background="@drawable/popup2"  android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_below="@id/tweet_message">
-<!--                     转发内容 -->
-                    <TextView android:textSize="16.0sp"  android:textColor="#ff222222" android:id="@+id/tweet_oriTxt" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:bufferType="spannable" />
-<!--                     转发内容图片  -->
-                    <ImageView android:id="@+id/tweet_upload_pic2" android:visibility="visible"  android:background="@drawable/detail_pic_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" 
-                                        android:layout_gravity="center_horizontal" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="5.0dip" android:src="@drawable/preview_pic_loading" android:scaleType="centerInside" android:maxWidth="120dip" android:maxHeight="120dip" android:minWidth="48.0dip" android:minHeight="33.0dip"/>
-                </LinearLayout>
-                <View android:id="@+id/vDevider" android:layout_width="fill_parent" android:layout_height="10.0sp" android:layout_below="@id/src_text_block" />
-<!--                在转发内容下面显示的图片 具体作用不知道 -->
-               
-                <ImageView android:id="@+id/tweet_upload_pic" android:visibility="gone" android:background="@drawable/detail_pic_bg"  android:layout_width="wrap_content" android:layout_height="wrap_content" 
-                android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="5.0dip" android:src="@drawable/preview_pic_loading" android:scaleType="centerInside" android:maxWidth="120dip" android:maxHeight="120dip" android:minWidth="48.0dip" android:minHeight="33.0dip" android:layout_below="@id/vDevider" />
-            
-<!--                <RelativeLayout android:orientation="horizontal" android:id="@+id/rlTextDescBlock" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/tweet_upload_pic"> -->
-<!--                     <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"  android:id="@+id/de" android:gravity="center" android:orientation="horizontal"> -->
-<!--                          <Button android:background="@drawable/detail_redirect"  android:layout_width="wrap_content" android:id="@+id/detail_redirect" android:layout_height="45dp" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_marginLeft="15dp"></Button> -->
-<!--                          <Button android:background="@drawable/detail_comment1" android:layout_centerInParent="true" android:layout_width="wrap_content" android:id="@+id/detail_comment" android:layout_height="45dp" android:layout_alignParentTop="true" android:layout_toRightOf="@+id/detail_redirect"></Button> -->
-<!--                     </LinearLayout>   -->
-<!--                </RelativeLayout> -->
-<!--                时间 -->
-               <TextView  android:textSize="14.0sp" android:textColor="#ff7d7d7d" android:id="@+id/tweet_updated" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/tweet_upload_pic" />
-<!--                 来自 -->
-               <TextView android:textSize="14.0sp"  android:textColor="#ff7d7d7d" android:id="@+id/tweet_via" android:paddingLeft="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf = "@id/tweet_updated" android:layout_below="@id/tweet_upload_pic" />
-            </RelativeLayout>
-            
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#fff4f4f4"
+    android:orientation="vertical" >
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
+
+        <RelativeLayout
+            android:id="@+id/tweet_profile"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/list_selector_background"
+            android:focusable="true"
+            android:paddingBottom="10.0dip" >
+
+            <!-- 头像 -->
+
+            <ImageView
+                android:id="@+id/tweet_profile_preview"
+                android:layout_width="60.0sp"
+                android:layout_height="60.0sp"
+                android:layout_margin="10.0dip"
+                android:src="@drawable/portrait" />
+            <!-- 昵称 -->
+
+            <TextView
+                android:id="@+id/tweet_profile_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="26.0dip"
+                android:layout_toRightOf="@id/tweet_profile_preview"
+                android:ellipsize="marquee"
+                android:fadingEdge="horizontal"
+                android:singleLine="true"
+                android:textColor="#ff222222"
+                android:textSize="18.0dip"
+                android:textStyle="bold"
+                android:typeface="monospace" />
+            <!-- 是否是VIP -->
+
+            <ImageView
+                android:id="@+id/tweet_profile_vip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5.0dip"
+                android:layout_marginLeft="5.0dip"
+                android:layout_marginTop="26.0dip"
+                android:layout_toRightOf="@id/tweet_profile_name"
+                android:src="@drawable/v"
+                android:visibility="visible" />
+            <!-- 没仔细研究作用 -->
+
+            <View
+                android:id="@+id/arrow"
+                android:layout_width="12.0dip"
+                android:layout_height="22.0dip"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="15.0dip"
+                android:layout_marginTop="29.0dip"
+                android:background="@drawable/ic_arrow" />
         </RelativeLayout>
+        <!-- 分割线。 -->
+
+        <ImageView
+            android:id="@+id/tweet_divider"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tweet_profile"
+            android:layout_marginBottom="15.0dip"
+            android:src="@drawable/divider_horizontal_timeline" />
+
+        <RelativeLayout
+            android:id="@+id/tweet_content"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tweet_divider" >
+
+            <!-- 微博内容 -->
+
+            <TextView
+                android:id="@+id/tweet_message"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="3.0dip"
+                android:bufferType="spannable"
+                android:paddingLeft="10.0dip"
+                android:paddingRight="10.0dip"
+                android:text="内容"
+                android:textColor="#ff222222"
+                android:textSize="18.0sp" />
+            <!-- 转发内容 默认不显示 -->
+
+            <LinearLayout
+                android:id="@+id/src_text_block"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tweet_message"
+                android:layout_marginLeft="10.0dip"
+                android:layout_marginRight="10.0dip"
+                android:background="@drawable/popup2"
+                android:orientation="vertical"
+                android:visibility="gone" >
+
+                <!-- 转发内容 -->
+
+                <TextView
+                    android:id="@+id/tweet_oriTxt"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:bufferType="spannable"
+                    android:paddingLeft="10.0dip"
+                    android:paddingRight="10.0dip"
+                    android:textColor="#ff222222"
+                    android:textSize="16.0sp" />
+                <!-- 转发内容图片 -->
+
+                <ImageView
+                    android:id="@+id/tweet_upload_pic2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="5.0dip"
+                    android:layout_marginLeft="5.0dip"
+                    android:layout_marginRight="5.0dip"
+                    android:layout_marginTop="5.0dip"
+                    android:background="@drawable/detail_pic_bg"
+                    android:maxHeight="120dip"
+                    android:maxWidth="120dip"
+                    android:minHeight="33.0dip"
+                    android:minWidth="48.0dip"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/preview_pic_loading"
+                    android:visibility="visible" />
+            </LinearLayout>
+
+            <View
+                android:id="@+id/vDevider"
+                android:layout_width="fill_parent"
+                android:layout_height="10.0sp"
+                android:layout_below="@id/src_text_block" />
+            <!-- 在转发内容下面显示的图片 具体作用不知道 -->
+
+            <ImageView
+                android:id="@+id/tweet_upload_pic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/vDevider"
+                android:layout_marginBottom="5.0dip"
+                android:layout_marginLeft="5.0dip"
+                android:layout_marginRight="5.0dip"
+                android:layout_marginTop="5.0dip"
+                android:background="@drawable/detail_pic_bg"
+                android:maxHeight="120dip"
+                android:maxWidth="120dip"
+                android:minHeight="33.0dip"
+                android:minWidth="48.0dip"
+                android:scaleType="centerInside"
+                android:src="@drawable/preview_pic_loading"
+                android:visibility="gone" />
+
+            <!-- <RelativeLayout android:orientation="horizontal" android:id="@+id/rlTextDescBlock" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/tweet_upload_pic"> -->
+            <!-- <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"  android:id="@+id/de" android:gravity="center" android:orientation="horizontal"> -->
+            <!-- <Button android:background="@drawable/detail_redirect"  android:layout_width="wrap_content" android:id="@+id/detail_redirect" android:layout_height="45dp" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_marginLeft="15dp"></Button> -->
+            <!-- <Button android:background="@drawable/detail_comment1" android:layout_centerInParent="true" android:layout_width="wrap_content" android:id="@+id/detail_comment" android:layout_height="45dp" android:layout_alignParentTop="true" android:layout_toRightOf="@+id/detail_redirect"></Button> -->
+            <!-- </LinearLayout> -->
+            <!-- </RelativeLayout> -->
+            <!-- 时间 -->
+
+            <TextView
+                android:id="@+id/tweet_updated"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tweet_upload_pic"
+                android:paddingLeft="10.0dip"
+                android:textColor="#ff7d7d7d"
+                android:textSize="14.0sp" />
+            <!-- 来自 -->
+
+            <TextView
+                android:id="@+id/tweet_via"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tweet_upload_pic"
+                android:layout_toRightOf="@id/tweet_updated"
+                android:paddingLeft="10.0dip"
+                android:textColor="#ff7d7d7d"
+                android:textSize="14.0sp" />
+
+            <TextView
+                android:id="@+id/retweetTimes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tweet_updated"
+                android:paddingLeft="10.0dip"
+                android:textColor="#ff7d7d7d"
+                android:textSize="16.0sp" 
+                android:layout_marginTop="7.0dip"/>
+             <TextView
+                android:id="@+id/commentTimes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/retweetTimes"
+                 android:layout_below="@+id/tweet_updated"
+                android:paddingLeft="10.0dip"
+                android:textColor="#ff7d7d7d"
+                android:textSize="16.0sp" 
+                android:layout_marginTop="7.0dip"/>
+        </RelativeLayout>
+    </RelativeLayout>
+
 </LinearLayout>
